--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author-img: david-freeman.jpg # add your photo
 about-author: Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: https://github.com/Topaz1618 # add your Github handle
+social-github: Topaz1618 # add your Github handle
 social-linkedin: # add your Linkedin handle
 social-email: topaz1618@163.com # add your Email address
 
